feat(grok): implement GrokProvider and related DTOs for AI orchestration